corrected individual form fields alignment using grids

--- a/SCA_FrontEnd/task_1/style.css
+++ b/SCA_FrontEnd/task_1/style.css
@@ -314,13 +314,38 @@ ul {
     padding: 50px 0 50px 60px;
 }
 
+.grid-item-right {
+    justify-self: center;
+}
+
+.contact-form > ul {
+    display: grid;
+    grid-template-rows: repeat(1, 1fr);
+    grid-template-columns: 2fr 2fr;
+    gap: 10px;
+}
+
+.contact-form > ul > .button, .form-comment {
+    grid-column: span 2; /* Spans two columns */
+}
+
+/* .form-email {
+
+} */
+
+/* .contact-form label {
+    grid-column: span 1; /* Spans only one column */
+} */
+
+
 .grid-item-right > h6{
     font-style: normal;
     font-weight: 400;
     padding: 30px 40px;
-    padding-right: 20%;
+    /* padding-right: 20%; */
     text-align: right;
 }
+
 
 
 /* footer section */
@@ -548,7 +573,7 @@ footer > p {
         font-style: normal;
         font-weight: 600;
         padding: 30px 40px;
-        padding-right: 20%;
+        /* padding-right: 20%; */
         text-align: left;
     }
 
